--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:paddingTop="35dp"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".WeatherActivity">
+    android:background="@color/white">
 
     <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
@@ -63,11 +62,18 @@
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <!-- Container ForecastFragment -->
-    <FrameLayout
-        android:id="@+id/container"
+    <!-- WeatherFragment (green area) -->
+    <fragment
+        android:id="@+id/weather_fragment"
+        android:name="vn.edu.usth.usthweather.WeatherFragment"
+        android:layout_width="match_parent"
+        android:layout_height="250dp" />
+
+    <!-- ForecastFragment (white area, RecyclerView) -->
+    <fragment
+        android:id="@+id/forecast_fragment"
+        android:name="vn.edu.usth.usthweather.ForecastFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/white"/>
+        android:layout_weight="1" />
 </LinearLayout>
