--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/toolbar_blue</item>
         <!-- Nền chung -->
         <item name="android:colorBackground">@color/white</item>
+
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
 </resources>
